# woork-platform

./: .gitignore
.github/workflows/: build-woork-agent-win7.yml  build-woork-agent-x86.yml  build-woork-agent.yml
ai-agent/: README.md  agent.py  config.example.yml  requirements.txt  trackers.py
ai-agent/scripts/: setup_model.sh
httpdocs/: .env.example  README.md  README.txt  package-lock.json  passenger_wsgi_app.conf
httpdocs/bootstrap/: app.php
httpdocs/config/: services.php  vite.php  woork.php
httpdocs/docs/: README_deploy_plesk.md  Woork.postman_collection.json  agent.md
woork-agent/: BUILD-WINDOWS-RELEASE.md  CONTROL.bat  DOCTOR.bat  INSTALL-WINDOWS.md  INSTALL.bat  PAIR.bat  PLATFORM-SUPPORT.md  README.md  RUN.bat  agent_entry.py  config.example.json  control_entry.py  pyproject.toml  release-manifest.example.json  requirements-win7.txt  service.example.json
woork-agent/deploy/windows/: WoorkAgentSetup-Win7.iss  WoorkAgentSetup-x86.iss  WoorkAgentSetup.iss  build-agent-win7.ps1  build-agent-x86.ps1  build-agent.ps1  build-installer-win7.ps1  build-installer-x86.ps1  build-installer.ps1  config.production.json  control-legacy.ps1  install-service.ps1  package-release.ps1  run-benchmark.ps1  run-doctor.ps1  uninstall-service.ps1
woork-agent/deploy/winsw/: woork-agent-service.xml
woork-agent/models/: manifest.example.json
woork-agent/tests/: test_import.py
woork-agent/woork_agent/: analyzers.py  api_client.py  camera_runtime.py  cli.py  control_app.py  diagnostics.py  model_registry.py  models.py  runtime.py  settings.py  storage.py  vision.py
(+160 files in other folders)
